Fix css that does not work on Firefox and IE

--- a/website/static/css/pages/timestamp-page.css
+++ b/website/static/css/pages/timestamp-page.css
@@ -72,4 +72,5 @@
 }
 .table-addon-terms td {
     background-color: white;
+    word-break: break-all;
 }
